Succesfuly added full feautures for quiz in addition to edit quiz
